added docs for controllers
