# backend/controllers/auth_controller.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/STREAM-BUSTER/stream-buster/models"
 	"github.com/STREAM-BUSTER/stream-buster/services/interfaces"
@@ -25,7 +26,7 @@ func NewAuthController(service interfaces.AuthServiceInterface, userService inte
 // LoginUser logs in valid users
 // @Summary Logs in valid users
 // @Description Authenticates a user using the provided username and password, and returns a JWT token in a cookie if successful.
-// @Tags Auth
+// @Tags auth
 // @Accept  application/x-www-form-urlencoded
 // @Produce  json
 // @Param username formData string true "Username"
@@ -34,7 +35,7 @@ func NewAuthController(service interfaces.AuthServiceInterface, userService inte
 // @Failure 400 {object} map[string]interface{} "Invalid username or password"
 // @Router /auth/login [post]
 func (contr *AuthController) LoginUser(c *gin.Context) {
-	email := c.PostForm("email")
+	email := strings.ToLower(c.PostForm("email"))
 	password := c.PostForm("password")
 
 	user, err := contr.userService.GetUserByEmail(email, false, true)
@@ -89,8 +90,21 @@ func (contr *AuthController) LoginUser(c *gin.Context) {
 	}
 }
 
+// RegisterUser registers a new user
+// @Summary Register a new user
+// @Description Register a user with email, password, first name, and last name
+// @Tags auth
+// @Accept  x-www-form-urlencoded
+// @Produce  json
+// @Param email formData string true "Email of the user"
+// @Param password formData string true "Password of the user"
+// @Param firstName formData string true "First name of the user"
+// @Param lastName formData string true "Last name of the user"
+// @Success 201 {object} models.User "Successfully created the user"
+// @Failure 400 {string} string "Error: User creation failed"
+// @Router /auth/register [post]
 func (contr *AuthController) RegisterUser(c *gin.Context) {
-	email := c.PostForm("email")
+	email := strings.ToLower(c.PostForm("email"))
 	password := c.PostForm("password")
 	firstName := c.PostForm("firstName")
 	lastName := c.PostForm("lastName")
@@ -111,7 +125,13 @@ func (contr *AuthController) RegisterUser(c *gin.Context) {
 	c.JSON(201, createdUser)
 }
 
-// LogoutUser removes all authentication tokens from cookies
+// LogoutUser logs out the user by clearing authentication tokens
+// @Summary Log out user
+// @Description Clear all authentication tokens from cookies and log out the user
+// @Tags auth
+// @Produce  json
+// @Success 200 {object} map[string]string "Logged out successfully"
+// @Router /auth/logout [post]
 func (contr *AuthController) LogoutUser(c *gin.Context) {
 	// Clear the refresh token cookie
 	c.SetCookie(
